<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.agamy.android.memoplaces.ui.activity.MainActivity">

    <item
        android:id="@+id/list_all"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/list_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_all"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/settings"
        app:showAsAction="never" />


</menu>